corpus/arcs/attributeless.txt
===
arcs - fwd
===

msc {
    a,b;

    a => b;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (entities
        (entity
            (entity_identifier)
        )
        (comma)
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (arcs
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
arcs - back
===

msc {
    a,b;

    a << b;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (entities
        (entity
            (entity_identifier)
        )
        (comma)
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (arcs
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
arcs - bidi
===

msc {
    a,b;

    a <=> b;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (entities
        (entity
            (entity_identifier)
        )
        (comma)
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (arcs
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)

===
arcs - boxes
===

msc {
    a,b;

    a box b;
    a abox b;
    a rbox b;
    a note b;
}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (entities
        (entity
            (entity_identifier)
        )
        (comma)
        (entity
            (entity_identifier)
        )
        (semicolon)
    )
    (arcs
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
        (arc
            (entity_identifier)
            (arrow)
            (entity_identifier)
        )
        (semicolon)
    )
    (curly_bracket_close)
)
