corpus/empties.txt
===
empty chart msc 
===

msc {

}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (curly_bracket_close)
)

===
empty chart xu 
===

xu {

}

---

(sequence_chart
    (start_token)
    (curly_bracket_open)
    (curly_bracket_close)
)

